why-it-matters basic-layout completed

--- a/why-it-matters.html
+++ b/why-it-matters.html
@@ -35,18 +35,50 @@
     </div>
     <!--Content-->
     <h1 class="title">Why It Matters</h1>
-    
-<!--    <div class="border">-->
-<!--        <div class="container">-->
-<!--            <p class="item">Even before the initial pandemic, there were already 43,000 people living in family shelters in New York City in 2019, with about 25,000 of those people being children and teens.</p>-->
-<!--        </div>-->
-<!--    </div>-->
-<!--    <div class="border">-->
-<!--        <div class="container">-->
-<!--            <p class="item">According to campaigners, the number of public school children suffering housing instability has remained over 100,000 for the past five years, with nearly 111,000 kids experiencing homelessness for the 2019-2020 school year. As staggering as that number is, it represents a 2.2 percent drop from the previous year. Eighty-five percent of students facing homelessness were Black or Hispanic.-->
-<!--</p>-->
-<!--        </div>-->
-<!--    </div>-->
+
+    <!--    <div class="border">-->
+    <!--        <div class="container">-->
+    <!--            <p class="item">Even before the initial pandemic, there were already 43,000 people living in family shelters in New York City in 2019, with about 25,000 of those people being children and teens.</p>-->
+    <!--        </div>-->
+    <!--    </div>-->
+    <!--    <div class="border">-->
+    <!--        <div class="container">-->
+    <!--            <p class="item">According to campaigners, the number of public school children suffering housing instability has remained over 100,000 for the past five years, with nearly 111,000 kids experiencing homelessness for the 2019-2020 school year. As staggering as that number is, it represents a 2.2 percent drop from the previous year. Eighty-five percent of students facing homelessness were Black or Hispanic.-->
+    <!--</p>-->
+    <!--        </div>-->
+    <!--    </div>-->
+    <div class="content">
+        <ul>
+            <li class="border container item itemLi">Even before the initial pandemic, there were already 43,000 people living in family shelters in New York City in 2019, with about 25,000 of those people being children and teens.</li>
+            <li class="border container item itemLi">According to campaigners, the number of public school children suffering housing instability has remained over 100,000 for the past five years, with nearly 111,000 kids experiencing homelessness for the 2019-2020 school year. As staggering
+                as that number is, it represents a 2.2 percent drop from the previous year. Eighty-five percent of students facing homelessness were Black or Hispanic.
+            </li>
+            <li class="border container item itemLi">Housing insecurity for racial or ethnic groups in the United States has a long history, attributable to racially targeted laws and systemic discrimination, particularly in the rental housing market. People of color remain poorer as a result
+                of these policies and behaviors.</li>
+            <li class="border container item itemLi">It is apparent that the coronavirus pandemic is having a different impact on tenants of color, increasing previous inequity and laying the groundwork for future imbalance.
+            </li>
+            <li class="border container item itemLi">Renters of color face discrimination in obtaining and maintaining housing.
+            </li>
+            <li class="border container item itemLi">. Before COVID-19, half of all renters were moderately or severely cost-burdened, with housing costs accounting for 30 to 50 percent of their household income. 9 Renters who are tight on money, particularly those of color, are more likely
+                to be evicted due to a higher possibility of missing rent payments. People of color, who experienced greater rates of job loss during the pandemic,10 are disproportionately cost-burdened and at risk of eviction.
+            </li>
+            <li class="border container item itemLi">Homelessness affects a significant amount of people of color. People of color are more likely to experience homelessness throughout their lives as a result of historical and contemporary policies, as well as systematic racism in housing, criminal
+                justice, education, work, and health care. As a result, communities of color are overrepresented among the homeless, with approximately 40% of those suffering homelessness identifying as Black, 22% as Latinx, 3% as Native American, and
+                2% as Pacific Islander. These racial discrepancies are only projected to widen as a result of the coronavirus pandemic's careless mismanagement.
+            </li>
+            <li class="border container item itemLi">Even before the pandemic, 76,000 people in New York City were homeless on any given night, and one million households were paying more than 30 percent of their income towards rent. The next mayor must address it head-on for the city to recover.
+            </li>
+            <li class="border container item itemLi">Many folk's already challenging conditions have been exacerbated by lost and reduced income. During the pandemic, renters of color reported having less overall confidence in their ability to pay their next month's rent and having not paid
+                the previous month's rent on time at proportionally greater rates than white renters.
+            </li>
+            <li class="border container item itemLi">People who have been evicted are also more likely to seek for and remain in shelters, and they spend more days there. Homelessness is already more common in Pacific Islander, Native American, Black, Latinx, and Asian neighborhoods, and once pushed into homelessness, families confront a "pileup of injustices." When secure shelter is unavailable, persons are frequently subjected to criminality as a result of anti-homeless legislation. They also face food insecurity, deterioration in physical and mental health, and additional challenges in securing future homes.
+</li>
+            <li class="border container item itemLi">boost the availability of affordable, accessible housing that fulfills the requirements of families Although new rental building is increasing, more rental units are being created for the high-income market, while the availability of low-cost rental units continues to drop as housing instability grows. Worse yet, few rental properties are accessible or built to accommodate multigenerational families' demands or lifestyles. Furthermore, restrictive zoning rules that concentrate racialized poverty and encourage segregation must be prohibited, and investments in affordable, accessible housing that allows residents a choice of where to live and works for a diverse range of people must be made.
+</li>
+            <li class="border container item itemLi">Summary: The rental market in New York City has always been notoriously tight and expensive. Housing for low-income New Yorkers has been more difficult to come by in recent decades, and homelessness has increased dramatically. Since 2000, the city's low-income population has remained relatively steady, with roughly a million households living on less than twice the federal poverty line. Despite this, the number of homeless families in shelters has increased over thrice. The Community Service Society's (CSS) annual Unheard Third survey of low-income households in New York City is used in this report to look at the many sorts of housing insecurity that tenants face today.
+</li>
+        </ul>
+    </div>
 </body>
 
 </html>
