--- a/about-us.html
+++ b/about-us.html
@@ -3,18 +3,19 @@
 
 <head>
     <link rel="stylesheet" href="index.css" />
+    <link rel="stylesheet" href="about-us.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Rowdies:wght@300&display=swap" rel="stylesheet">
 </head>
 
 <body>
-
+    <!--Navbar-->
     <div class="nav">
         <input type="checkbox" id="nav-check">
         <div class="nav-header">
             <div class="nav-title">
-                Learn about us 
+                Learn about us
             </div>
         </div>
         <div class="nav-btn">
@@ -33,13 +34,34 @@
         </div>
     </div>
 
-    <div class="body-container">
-        <div>
-            <section class="section1">
-                
-            </section>
+    <!--Flip Card For Jan-->
+    <div class="flip-card">
+        <div class="flip-card-inner">
+            <div class="flip-card-front">
+                <img src="https://bit.ly/2YZzHSM" alt="Avatar" style="width:300px;height:300px;">
+            </div>
+            <div class="flip-card-back">
+                <h1>Jan Morales</h1>
+                <p>Future Software Engineer</p>
+                <p>Fun Fact: Lorem ipsum dolor sit amet.</p>
+            </div>
         </div>
     </div>
+
+    <!--Flip Card For Jason-->
+    <div class="flip-card2">
+        <div class="flip-card-inner2">
+            <div class="flip-card-front2">
+                <img src="https://bit.ly/3lR3cPI" alt="Avatar2" style="width:300px;height:300px;">
+            </div>
+            <div class="flip-card-back2">
+                <h1>Jason Padilla</h1>
+                <p>Future Software Engineer</p>
+                <p>Fun Fact: Lorem ipsum dolor sit amet.</p>
+            </div>
+        </div>
+    </div>
+
 
 </body>
 
