Mobile About-Us Layout

--- a/about-us.html
+++ b/about-us.html
@@ -7,6 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Rowdies:wght@300&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
@@ -34,34 +35,56 @@
         </div>
     </div>
 
-    <!--Flip Card For Jan-->
-    <div class="flip-card">
-        <div class="flip-card-inner">
-            <div class="flip-card-front">
-                <img src="https://bit.ly/2YZzHSM" alt="Avatar" style="width:300px;height:300px;">
-            </div>
-            <div class="flip-card-back">
-                <h1>Jan Morales</h1>
-                <p>Future Software Engineer</p>
-                <p>Fun Fact: Lorem ipsum dolor sit amet.</p>
-            </div>
-        </div>
+
+    <div class="card">
+        <img src="https://bit.ly/2YZzHSM" alt="John" style="width:100%">
+        <h1>Jason Padilla</h1>
+        <p class="title">Future Software Engineer</p>
+        <p>Marcy Lab School</p>
+        <a href="#"><i class="fa fa-inbox"></i>
+        <a href="https://www.instagram.com/jayleaf1125/"><i class="fa fa-instagram"></i>
+        <a href="https://www.linkedin.com/in/jason-padilla-8294bb1a7/"><i class="fa fa-linkedin"></i></a>
+        <a href="#"><i class="fa fa-facebook"></i></a>
+        <p><button>Contact</button></p>
+    </div>
+    <div class="facts">
+        <h3 class="title1">Fun Facts:</h3>
+        <ol class="factList">
+            <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum, adipisci?</li>
+            <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptates, nemo?</li>
+            <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores, omnis.</li>
+            <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nesciunt, molestias.</li>
+            <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo, a!</li>
+            <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo, a!</li>
+            <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo, a!</li>
+        </ol>
     </div>
 
-    <!--Flip Card For Jason-->
-    <div class="flip-card2">
-        <div class="flip-card-inner2">
-            <div class="flip-card-front2">
-                <img src="https://bit.ly/3lR3cPI" alt="Avatar2" style="width:300px;height:300px;">
-            </div>
-            <div class="flip-card-back2">
-                <h1>Jason Padilla</h1>
-                <p>Future Software Engineer</p>
-                <p>Fun Fact: Lorem ipsum dolor sit amet.</p>
-            </div>
-        </div>
+    <div class="card">
+        <img src="https://bit.ly/2YZzHSM" alt="John" style="width:100%">
+        <h1>Jan Morales</h1>
+        <p class="title">Future Software Engineer</p>
+        <p>Marcy Lab School</p>
+        <a href="#"><i class="fa fa-inbox"></i>
+        <a href="#"><i class="fa fa-instagram"></i>
+        <a href="#"><i class="fa fa-linkedin"></i></a>
+        <a href="#"><i class="fa fa-facebook"></i></a>
+        <p><button>Contact</button></p>
     </div>
-
+    <div class="facts">
+        <h3 class="title1">Fun Facts:</h3>
+        <ol class="factList">
+            <li class="border container item itemLi">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum, adipisci?</li>
+            <li class="border container item itemLi">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptates, nemo?</li>
+            <li class="border container item itemLi">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores, omnis.</li>
+        </ol>
+    </div>
+    <div class="bio">
+        <h3 class="title1">Quick Summary:</h3>
+        <p class="border container item itemLi">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium nulla 
+        laborum dignissimos consequuntur incidunt repellat aut sint soluta, maxime minus perferendis culpa, 
+        qui expedita ducimus.</p>
+    </div>
 
 </body>
 
