About Me Layout Completed

--- a/about-us.html
+++ b/about-us.html
@@ -50,14 +50,16 @@
     <div class="facts">
         <h3 class="title1">Fun Facts:</h3>
         <ol class="factList">
-            <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum, adipisci?</li>
-            <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptates, nemo?</li>
-            <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores, omnis.</li>
-            <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nesciunt, molestias.</li>
-            <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo, a!</li>
-            <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo, a!</li>
-            <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo, a!</li>
+          <li class="border container item itemLi">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum, adipisci?</li>
+            <li class="border container item itemLi">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptates, nemo?</li>
+            <li class="border container item itemLi">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores, omnis.</li>
         </ol>
+    </div>
+    <div class="bio">
+        <h3 class="title1">Hello There!</h3>
+        <p class="border">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium nulla 
+        laborum dignissimos consequuntur incidunt repellat aut sint soluta, maxime minus perferendis culpa, 
+        qui expedita ducimus.</p>
     </div>
 
     <div class="card">
@@ -80,8 +82,8 @@
         </ol>
     </div>
     <div class="bio">
-        <h3 class="title1">Quick Summary:</h3>
-        <p class="border container item itemLi">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium nulla 
+        <h3 class="title1">Hello There!</h3>
+        <p class="border">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium nulla 
         laborum dignissimos consequuntur incidunt repellat aut sint soluta, maxime minus perferendis culpa, 
         qui expedita ducimus.</p>
     </div>
