--- a/Causes.html
+++ b/Causes.html
@@ -42,7 +42,7 @@
     <main>
         
         <div>
-            <figure class="causes-pic">
+            <figure class="responsvie">
                 <img src="https://thumbs.dreamstime.com/z/principal-causes-global-warming-power-generation-transportation-agriculture-deforestation-as-main-reasons-climate-33339843.jpg">
                <figcaption>This imagie show the mian drivers of climate change.</figcaption>
             </figure>
