--- a/Homepage.html
+++ b/Homepage.html
@@ -63,9 +63,7 @@
         </div>
         
         <aside>
-            <iframe
-src="https://www.youtube.com/watch?v=G4H1N_yXBiA&ab_channel=NationalGeographic">
-</iframe>
+         <iframe width="560" height="315" src="https://www.youtube.com/embed/G4H1N_yXBiA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </aside>
     
     </main>
