--- a/what.html
+++ b/what.html
@@ -18,7 +18,7 @@
                     <a href="#" class="nav-link">What our the causes?</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#" class="nav-link">why we need to act?</a>
+                    <a href="#" class="nav-link">Why we need to act?</a>
                 </li>
                 <li class="nav-item">
                     <a href="#" class="nav-link">Possible solution?</a>
@@ -55,7 +55,7 @@
 	    <p class="explanations">According to our research, we have a very limited amount of time left to undo the damage that has happened to our society from climate change. As the climate increases, our resources will deplete over time, causing it to live harder in the world we have.</p>
 	
 	<h5>Our Mission</h5>
-	<p class="explanations">Our goal is to bring awareness to the public about how this is an essential problem that must be contained.</p>
+	<p class="explanations">Our goal is to bring awareness to the public about this how this is an essential problem and it can be contained.</p>
 
             </article>
         </div>
