--- a/Effects.html
+++ b/Effects.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
  <head>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="homepage.css">
     <title>Climate change</title>
 </head>
 
