home page css.file crated and html filed linked

--- a/Effects.html
+++ b/Effects.html
@@ -44,11 +44,11 @@
         <div>
             <meta Polar Bear="viewport" content="width=device-width, initial-scale=1.0">
             <style>
-                Polar Bear {
-                    width: 100%;
-                    height: auto;
-                }
-            </style>
+            /*    Polar Bear {*/
+            /*        width: 100%;*/
+            /*        height: auto;*/
+            /*    }*/
+            /*</style>
             <figure>
                 <img src="Polar Bear.jpg" class="responsive"
                <figcaption>Scientists have determined with 95% certainty that between 22,000 and 31,000 polar bears exist on Earth today. </figcaption>
