--- a/what.html
+++ b/what.html
@@ -9,13 +9,13 @@
     <header class="header">
 
         <nav class="navbar">
-            <a href="Homepage.html" class="nav-logo">Home</a>
+            <a href="what.html" class="nav-logo">Home</a>
             <ul class="nav-menu">
                 <li class="nav-item">
-                    <a href="#place-in-page-link-here" class="nav-link">What is climate change?</a>
+                    <a href="what.html" class="nav-link">What is climate change?</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#" class="nav-link">What our the causes?</a>
+                    <a href="Causes.html" class="nav-link">What our the causes?</a>
                 </li>
                 <li class="nav-item">
                     <a href="#" class="nav-link">Why we need to act?</a>
