--- a/Effects.html
+++ b/Effects.html
@@ -8,10 +8,10 @@
 <body>
     <header class="header">
         <nav class="navbar">
-            <a href="what.html" class="nav-logo">Home</a>
+            <a href="Effects.html" class="nav-logo">Home</a>
             <ul class="nav-menu">
                 <li class="nav-item">
-                    <a href="Effects.html" class="nav-link">What is climate change?</a>
+                    <a href="what.html" class="nav-link">What is climate change?</a>
                 </li>
                 <li class="nav-item">
                     <a href="Causes.html" class="nav-link">What our the causes?</a>
