--- a/what.html
+++ b/what.html
@@ -9,7 +9,7 @@
     <header class="header">
 
         <nav class="navbar">
-            <a href="what.html" class="nav-logo">Home</a>
+            <a href="Effects.html" class="nav-logo">Home</a>
             <ul class="nav-menu">
                 <li class="nav-item">
                     <a href="what.html" class="nav-link">What is climate change?</a>
