--- a/Causes.html
+++ b/Causes.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
  <head>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="what.css">
     <title>Climate change</title>
 </head>
 
@@ -42,7 +42,7 @@
     <main>
         
         <div>
-            <figure class="responsvie">
+            <figure>
                 <img src="https://thumbs.dreamstime.com/z/principal-causes-global-warming-power-generation-transportation-agriculture-deforestation-as-main-reasons-climate-33339843.jpg">
                <figcaption>This imagie show the mian drivers of climate change.</figcaption>
             </figure>
@@ -55,7 +55,7 @@ The main causes of climate change is burning fossil fuels like oil, gas and coal
         
         <aside>
             <figue>
-                <iframe width="100%" height="315"
+                <iframe width="100%" height="300"
 src="https://www.youtube.com/embed/_Me8YHObXmo">
 </iframe> <figcaption>
     time laps of ice caps melting.
