--- a/what.html
+++ b/what.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
  <head>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="what.css">
     <title>Climate change</title>
 </head>
 
