--- a/Solutions.html
+++ b/Solutions.html
@@ -49,31 +49,31 @@
             </figure>
             <article>
     <h5>What could the world look like if we neglect it?</h5>		
-        <p class="explanations">The world could be subject to numerous problems:
-            <ol>
-                <li>Coral Bleaching: the phenomenon in which the aquatic life diminishes due to underwater plants like coral and seaweed die, thus making them unfruitful and hurting organisms that rely on those materials.</li>
-                <li>Increasing heatwaves that will make it harder to sustain plant-life and wildlife on the planet.</li>
-                <li>Floods will have an almost 100% probability to occur, forcing many cities to either spend more money on ways to contain sea levels or see our world crumble below water.</li>
-            </ol>
+        <p>The world could be subject to numerous problems:
+            <ul>
+                <li class="list">Coral Bleaching: the phenomenon in which the aquatic life diminishes due to underwater plants like coral and seaweed die, thus making them unfruitful and hurting organisms that rely on those materials.</li>
+                <li class="list">Increasing heatwaves that will make it harder to sustain plant-life and wildlife on the planet.</li>
+                <li class="list">Floods will have an almost 100% probability to occur, forcing many cities to either spend more money on ways to contain sea levels or see our world crumble below water.</li>
+            </ul>
         </p>
 	
 	<h5>What are short-term goals in order to reverse?</h5>
-	    <p class="explanations">Many experts suggest that we should:
+	    <p>Many experts suggest that we should:
 	        <ul>
-	            <li>Recycling trash in order to make bio-based energy.</li>
-	            <li>Utilizing any resources, even if they are food/drinks, to not waste any of them. Water helps make electricity and depleting water sources make it harder to supply all the demand, and edible resources utilize ample amounts of energy that could be geared towareds the use of necessities.</li>
-	            <li>Limit the amount of energy we use. Instead of having the tv on all day with the "Money Heist" episodes you've seen 10 times, turn it off and read a book or do something constructive that doesn't require so much wasted energy.</li>
-	            <li>Add solar panels to public and private areas to use in order to replace all the use of harmful energy whilst not changing the rapid pace we use power.</li>
+	            <li class="list">Recycling trash in order to make bio-based energy.</li>
+	            <li class="list">Utilizing any resources, even if they are food/drinks, to not waste any of them. Water helps make electricity and depleting water sources make it harder to supply all the demand, and edible resources utilize ample amounts of energy that could be geared towareds the use of necessities.</li>
+	            <li class="list">Limit the amount of energy we use. Instead of having the tv on all day with the "Money Heist" episodes you've seen 10 times, turn it off and read a book or do something constructive that doesn't require so much wasted energy.</li>
+	            <li class="list">Add solar panels to public and private areas to use in order to replace all the use of harmful energy whilst not changing the rapid pace we use power.</li>
 	            
 	        </ul>
 	    </p>
 	
 	<h5>What are long-term goals in order to reverse?</h5>
-	<p class="explanations">Many experts suggest that we should:
+	<p>Many experts suggest that we should:
 	        <ul>
-	            <li>Finding renewable energy sources such as solar energy or hydro-powered energy, which derives from water flow. Also, eradicating the harmful energy sources. </li>
-	            <li>Managing our agriculture and forests in order to help </li>
-	            <li>Creating Legislature to make it affordable. While it seems to be a growing trend, renewable energy is still mostly used by the wealthy to maximize their energy. Which differs from the lower classes, who depend on these harmful resources.</li>
+	            <li class="list">Finding renewable energy sources such as solar energy or hydro-powered energy, which derives from water flow. Also, eradicating the harmful energy sources. </li>
+	            <li class="list">Managing our agriculture and forests in order to help </li>
+	            <li class="list">Creating Legislature to make it affordable. While it seems to be a growing trend, renewable energy is still mostly used by the wealthy to maximize their energy. Which differs from the lower classes, who depend on these harmful resources.</li>
 	        </ul>
 	    </p>
 
