This links all the pages together

--- a/Effects.html
+++ b/Effects.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
  <head>
-    <link rel="stylesheet" href="homepage.css">
+    <link rel="stylesheet" href="what.css">
     <title>Climate change</title>
 </head>
 
 <body>
     <header class="header">
         <nav class="navbar">
-            <a href="Effects.html" class="nav-logo">Home</a>
+            <a href="Homepage.html" class="nav-logo">Home</a>
             <ul class="nav-menu">
                 <li class="nav-item">
                     <a href="what.html" class="nav-link">What is climate change?</a>
@@ -17,10 +17,10 @@
                     <a href="Causes.html" class="nav-link">What our the causes?</a>
                 </li>
                 <li class="nav-item">
-                    <a href="" class="nav-link">why we need to act?</a>
+                    <a href="Effects.html" class="nav-link">why we need to act?</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#" class="nav-link">Possible solution?</a>
+                    <a href="Solutions.html" class="nav-link">Possible solution?</a>
                 </li>
             </ul>
             <div class="hamburger">
