--- a/Homepage.html
+++ b/Homepage.html
@@ -13,16 +13,16 @@ content="width=device-width, intial-scale=1.0">
             <a href="Homepage.html" class="nav-logo">Home</a>
             <ul class="nav-menu">
                 <li class="nav-item">
-                    <a href="#place-in-page-link-here" class="nav-link">What is climate change?</a>
+                    <a href="what.html" class="nav-link">What is climate change?</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#" class="nav-link">What our the causes?</a>
+                    <a href="Causes.html" class="nav-link">What our the causes?</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#" class="nav-link">why we need to act?</a>
+                    <a href="Effects.html" class="nav-link">why we need to act?</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#" class="nav-link">Possible solution?</a>
+                    <a href="Solutions.html" class="nav-link">Possible solution?</a>
                 </li>
             </ul>
             <div class="hamburger">
