--- a/Solutions.html
+++ b/Solutions.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
  <head>
-    <link rel="stylesheet" href="solutions.css">
+    <link rel="stylesheet" href="what.css">
     <title>Climate change</title>
 </head>
 
@@ -12,16 +12,16 @@
             <a href="Homepage.html" class="nav-logo">Home</a>
             <ul class="nav-menu">
                 <li class="nav-item">
-                    <a href="#place-in-page-link-here" class="nav-link">What is climate change?</a>
+                    <a href="what.html" class="nav-link">What is climate change?</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#" class="nav-link">What our the causes?</a>
+                    <a href="Causes.html" class="nav-link">What our the causes?</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#" class="nav-link">Why we need to act?</a>
+                    <a href="Effects.html" class="nav-link">Why we need to act?</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#" class="nav-link">Possible solution?</a>
+                    <a href="Solutions.html" class="nav-link">Possible solution?</a>
                 </li>
             </ul>
             <div class="hamburger">
