--- a/what.html
+++ b/what.html
@@ -9,7 +9,7 @@
     <header class="header">
 
         <nav class="navbar">
-            <a href="Effects.html" class="nav-logo">Home</a>
+            <a href="Homepage.html" class="nav-logo">Home</a>
             <ul class="nav-menu">
                 <li class="nav-item">
                     <a href="what.html" class="nav-link">What is climate change?</a>
@@ -18,10 +18,10 @@
                     <a href="Causes.html" class="nav-link">What our the causes?</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#" class="nav-link">Why we need to act?</a>
+                    <a href="Effects.html" class="nav-link">Why we need to act?</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#" class="nav-link">Possible solution?</a>
+                    <a href="Solutions.html" class="nav-link">Possible solution?</a>
                 </li>
             </ul>
             <div class="hamburger">
