--- a/Solutions.html
+++ b/Solutions.html
@@ -73,7 +73,7 @@
 	        <ul>
 	            <li class="list">Finding renewable energy sources such as solar energy or hydro-powered energy, which derives from water flow. Also, eradicating the harmful energy sources. </li>
 	            <li class="list">Managing our agriculture and forests in order to help </li>
-	            <li class="list">Creating Legislature to make it affordable. While it seems to be a growing trend, renewable energy is still mostly used by the wealthy to maximize their energy. Which differs from the lower classes, who depend on these harmful resources.</li>
+	            <li class="list">Creating Legislature to make it affordable. Athough it be a growing trend, renewable energy is still mostly used by the wealthy to maximize their energy, while the lower classes, who depend on these harmful resources.</li>
 	        </ul>
 	    </p>
 
