--- a/Causes.html
+++ b/Causes.html
@@ -44,12 +44,17 @@
         <div>
             <figure class="responsvie">
                 <img src="https://thumbs.dreamstime.com/z/principal-causes-global-warming-power-generation-transportation-agriculture-deforestation-as-main-reasons-climate-33339843.jpg">
-               <figcaption>This imagie show the mian drivers of climate change.</figcaption>
+               <figcaption>This image shows the main drivers of climate change.</figcaption>
             </figure>
             <article>
-                <p>
-The main causes of climate change is burning fossil fuels like oil, gas and coal. A few other main player in climate change would be deforestation, Deforestation eliminates trees that would other wise absorb carbon dioxide. On top of that trees when burned release carbon dioxide. Agriculture is another key player as animals produce methane, which is 30 times more powerful than carbon dioxide. These the top 3 causes for climate change according to the Met office. All of these contribute to the increase of greenhouse gases that in a time trap heat and increases the world temperature. This in term leads to the melting of sea ice, which helps reflect heat, but as more sea ice melts the area of dark surfaces (ie, ocean and land) increases and this absorbs more heat. 
-</p>
+                <p>According to the Met Office, there are 3 main causes for climate change:</p>
+                <ul>
+<li>A leading cause is burning fossil fuels like oil, gas and coal.</li>
+<li>Deforestation plaugues the environment as well, eliminating trees that would otherwise absorb carbon dioxide.</li>
+<li>Agricultural depletion as well since animals produce methane, which is 30 times more powerful than carbon dioxide.</li>
+</ul>
+<p> These in term lead to the melting of sea ice, which helps reflect heat. However, as more sea ice melts, the area of dark surfaces (ie. ocean and land) increases and absorbs more heat.</p>
+
         </article>
         </div>
         
