swiched video orientation

--- a/Causes2-0.html
+++ b/Causes2-0.html
@@ -41,7 +41,7 @@
                 <img src="https://thumbs.dreamstime.com/z/principal-causes-global-warming-power-generation-transportation-agriculture-deforestation-as-main-reasons-climate-33339843.jpg">
                <figcaption>This image shows the main drivers of climate change.</figcaption>
             </figure>
-            <!--<div class="row">-->
+            <div class="row target">
             <article class="col-xs-6 align-items-center">
                 <p>According to the Met Office, there are 3 main causes for climate change:</p>
                 <ul>
@@ -52,7 +52,7 @@
 <p> These in term lead to the melting of sea ice, which helps reflect heat. However, as more sea ice melts, the area of dark surfaces (ie. ocean and land) increases and absorbs more heat.</p>
 
         </article>
-        <!--</div>-->
+        </div>
         </div>
         
         <aside>
