formated causes img

--- a/Causes2-0.html
+++ b/Causes2-0.html
@@ -38,10 +38,10 @@
         
         <div class="row">
             <figure class="col-xs-6">
-                <img src="https://thumbs.dreamstime.com/z/principal-causes-global-warming-power-generation-transportation-agriculture-deforestation-as-main-reasons-climate-33339843.jpg">
+                <img src="https://thumbs.dreamstime.com/z/principal-causes-global-warming-power-generation-transportation-agriculture-deforestation-as-main-reasons-climate-33339843.jpg" class="causes">
                <figcaption>This image shows the main drivers of climate change.</figcaption>
             </figure>
-            <div class="row target">
+            <div class="target">
             <article class="col-xs-6 align-items-center">
                 <p>According to the Met Office, there are 3 main causes for climate change:</p>
                 <ul>
