--- a/Causes2-0.html
+++ b/Causes2-0.html
@@ -35,7 +35,7 @@
     <!--</header>-->
     
     <main class="container-fluid">
-        
+        <h1>What are the causes of climate change?</h1>
         <div class="row">
             <figure class="col-xs-6">
                 <img src="https://thumbs.dreamstime.com/z/principal-causes-global-warming-power-generation-transportation-agriculture-deforestation-as-main-reasons-climate-33339843.jpg" class="causes">
@@ -59,7 +59,7 @@
             <figue>
                 <iframe width="100%" height="300"
 src="https://www.youtube.com/embed/_Me8YHObXmo">
-</iframe> <figcaption>
+</iframe> <figcaption class="pic-cap">
     time laps of ice caps melting.
 </figcaption>
             </figue>
