added doomes day clock

--- a/Causes2-0.html
+++ b/Causes2-0.html
@@ -36,6 +36,10 @@
     
     <main class="container-fluid">
         <h1>What are the causes of climate change?</h1>
+       <div class="clock">
+           <script src="https://climateclock.world/widget-v2.js" async></script>
+<climate-clock />
+       </div>
         <div class="row">
             <figure class="col-xs-6">
                 <img src="https://thumbs.dreamstime.com/z/principal-causes-global-warming-power-generation-transportation-agriculture-deforestation-as-main-reasons-climate-33339843.jpg" class="causes">
@@ -57,7 +61,7 @@
         
         <aside>
             <figue>
-                <iframe width="100%" height="300"
+                <iframe
 src="https://www.youtube.com/embed/_Me8YHObXmo">
 </iframe> <figcaption class="pic-cap">
     time laps of ice caps melting.
