added spacing to text

--- a/Causes2-0.html
+++ b/Causes2-0.html
@@ -46,7 +46,7 @@
                <figcaption>This image shows the main drivers of climate change.</figcaption>
             </figure>
             <div class="target">
-            <article class="col-xs-6 align-items-center">
+            <article class="col-xs-6 align-items-center text">
                 <p>According to the Met Office, there are 3 main causes for climate change:</p>
                 <ul>
 <li>A leading cause is burning fossil fuels like oil, gas and coal.</li>
