add body template

--- a/Causes2-0.html
+++ b/Causes2-0.html
@@ -42,7 +42,7 @@
        </div>
         <div class="row">
             <figure class="col-xs-6">
-                <img src="https://thumbs.dreamstime.com/z/principal-causes-global-warming-power-generation-transportation-agriculture-deforestation-as-main-reasons-climate-33339843.jpg" class="causes">
+                <img src="https://thumbs.dreamstime.com/z/principal-causes-global-warming-power-generation-transportation-agriculture-deforestation-as-main-reasons-climate-33339843.jpg" class="img-fluid" alt="Responsive image">
                <figcaption>This image shows the main drivers of climate change.</figcaption>
             </figure>
             <div class="target">
@@ -77,10 +77,8 @@ src="https://www.youtube.com/embed/_Me8YHObXmo">
     
     
     <footer>
-        <div>
             <a>home link</a>
             <a>resorces</a>
-        </div>
     </footer>
 </body>
 
