--- a/Causes2-0.html
+++ b/Causes2-0.html
@@ -9,30 +9,30 @@
 </head>
 
 <body class="causes">
-    <!--<header class="header">-->
-    <!--    <nav class="navbar">-->
-    <!--        <a href="Homepage.html" class="nav-logo">Home</a>-->
-    <!--        <ul class="nav-menu">-->
-    <!--            <li class="nav-item">-->
-    <!--                <a href="what.html" class="nav-link">What is climate change?</a>-->
-    <!--            </li>-->
-    <!--            <li class="nav-item">-->
-    <!--                <a href="Causes.html" class="nav-link">What our the causes?</a>-->
-    <!--            </li>-->
-    <!--            <li class="nav-item">-->
-    <!--                <a href="Effects.html" class="nav-link">why we need to act?</a>-->
-    <!--            </li>-->
-    <!--            <li class="nav-item">-->
-    <!--                <a href="Solutions.html" class="nav-link">Possible solution?</a>-->
-    <!--            </li>-->
-    <!--        </ul>-->
-    <!--        <div class="hamburger">-->
-    <!--            <span class="bar"></span>-->
-    <!--            <span class="bar"></span>-->
-    <!--            <span class="bar"></span>-->
-    <!--        </div>-->
-    <!--    </nav>-->
-    <!--</header>-->
+    <header class="header">
+        <nav class="navbar">
+            <a href="Homepage.html" class="nav-logo">Home</a>
+            <ul class="nav-menu">
+                <li class="nav-item">
+                    <a href="what.html" class="nav-link">What is climate change?</a>
+                </li>
+                <li class="nav-item">
+                    <a href="Causes.html" class="nav-link">What our the causes?</a>
+                </li>
+                <li class="nav-item">
+                    <a href="Effects.html" class="nav-link">why we need to act?</a>
+                </li>
+                <li class="nav-item">
+                    <a href="Solutions.html" class="nav-link">Possible solution?</a>
+                </li>
+            </ul>
+            <div class="hamburger">
+                <span class="bar"></span>
+                <span class="bar"></span>
+                <span class="bar"></span>
+            </div>
+        </nav>
+    </header>
     
     <main class="container-fluid">
         <h1>What are the causes of climate change?</h1>
