added color scheme to all pages

--- a/what.html
+++ b/what.html
@@ -7,8 +7,8 @@
     <title>Climate change</title>
 </head>
 
-<body>
-    <header class="what">
+<body class="what">
+    <header>
 <!--comeback and add unique style sheet-->
         <nav class="navbar">
             <a href="Homepage.html" class="nav-logo">Home</a>
