--- a/Causes.html
+++ b/Causes.html
@@ -50,13 +50,14 @@
             </figure>
             <div class="target">
             <article class="col-xs-6 align-items-center text">
-                <p>According to the Met Office, there are 3 main causes for climate change:</p>
-                <ul>
-<li>A leading cause is burning fossil fuels like oil, gas and coal.</li>
-<li>Deforestation plaugues the environment as well, eliminating trees that would otherwise absorb carbon dioxide.</li>
-<li>Agricultural depletion as well since animals produce methane, which is 30 times more powerful than carbon dioxide.</li>
-</ul>
-<p> These in term lead to the melting of sea ice, which helps reflect heat. However, as more sea ice melts, the area of dark surfaces (ie. ocean and land) increases and absorbs more heat.</p>
+               <h2>What causes Climate change?</h2>		
+        <p>The number of drivers in climate change are numerous from man made causes to natural catalyst. The top 3 are:</p>
+	<h5>The burning of fossil fuels</h5>
+	    <p>These fuel sources contain carbon dioxide that has been stored underground for centries. When burend, the stored carbon dioxide is relased into the air.</p>
+	<h5>Deforestation</h5>
+	    <p>Deforestation eliminates trees that would other wise absorb carbon dioxide. On top of that trees when burned release carbon dioxide. </p>
+	<h5>Agriculture </h5>
+	    <p>Agriculture is another key player as animals produce methane, which is 30 times more powerful than carbon dioxide.</p>
 
         </article>
         </div>
