added link to top of page

--- a/what.html
+++ b/what.html
@@ -8,6 +8,7 @@
 </head>
 
 <body class="what">
+        <a name="top"></a>
     <header>
 <!--comeback and add unique style sheet-->
         <nav class="navbar">
@@ -86,7 +87,7 @@
     
     
     <footer class="d-flex justify-content-between">
-            <a>home link</a>
+       <a href="#top">Back to top of page</a>
             <a>
                 <li>UNCEP</li>
                 <li>NASA</li>
