--- a/Effects.html
+++ b/Effects.html
@@ -8,6 +8,8 @@
 </head>
 
 <body class="effects">
+        <a name="top"></a>
+
         <!--the body class is uniquie to every page, it adds the theme-->
 
     <header class="header">
@@ -85,7 +87,7 @@
     
     
     <footer class="d-flex justify-content-between">
-            <a>home link</a>
+       <a href="#top">Back to top of page</a>
             <a>resorces</a>
     </footer>
 </body>
