took out a resorces link, its not ready

--- a/Effects.html
+++ b/Effects.html
@@ -88,7 +88,7 @@
     
     <footer class="d-flex justify-content-between">
        <a href="#top">Back to top of page</a>
-            <a>resorces</a>
+            <!--<a>resorces</a>-->
     </footer>
 </body>
 
