--- a/what.html
+++ b/what.html
@@ -88,11 +88,11 @@
     
     <footer class="d-flex justify-content-between">
        <a href="#top">Back to top of page</a>
-            <a>
-                <li>UNCEP</li>
-                <li>NASA</li>
-                <li>World Wildlife Organization</li>
-            </a>
+            <!--<a>-->
+            <!--    <li>UNCEP</li>-->
+            <!--    <li>NASA</li>-->
+            <!--    <li>World Wildlife Organization</li>-->
+            <!--</a>-->
     </footer>
 </body>
 
