linked all pages to index

--- a/what.html
+++ b/what.html
@@ -12,7 +12,7 @@
     <header>
 <!--comeback and add unique style sheet-->
         <nav class="navbar">
-            <a href="Homepage.html" class="nav-logo">Home</a>
+            <a href="index.html" class="nav-logo">Home</a>
             <ul class="nav-menu">
                 <li class="nav-item">
                     <a href="what.html" class="nav-link">What is climate change?</a>
