added home page link

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <header class="header">
         <nav class="navbar">
-            <a href="Homepage.html" class="nav-logo">Home</a>
+            <a href="index.html" class="nav-logo">Home</a>
             <ul class="nav-menu">
                 <li class="nav-item">
                     <a href="what.html" class="nav-link">What is climate change?</a>
