deleted solutions figcap

--- a/Solutions.html
+++ b/Solutions.html
@@ -93,7 +93,7 @@
                 <iframe
                 src="https://www.youtube.com/embed/t4eE9Fqu1yE">
                 </iframe><figcaption class="pic-cap">
-    time laps of ice caps melting.
+    <!--time laps of ice caps melting.-->
 </figcaption>
             </figue>
         </aside>
