--- a/additional.html
+++ b/additional.html
@@ -3,7 +3,7 @@
   <head>
     <title>Additional</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./stylesheet.css" type="text/css" />
+    <link rel="stylesheet" href="style.css" type="text/css" />
   </head>
   <body>
 
