it told me i needed to commit again

--- a/About/Aboutus.html
+++ b/About/Aboutus.html
@@ -36,7 +36,7 @@
             </header>
             <article>
                 <figcaption>
-                    <img src=""></img>
+                    <img alt="Image of about us"src="https://raw.githubusercontent.com/Knox-Phillips/unit-1-project/master/depositphotos_49080337-stock-photo-about-us.webp"></img>
                 </figcaption>
                 <section>
                     <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
