--- a/index.html
+++ b/index.html
@@ -1,12 +1,25 @@
 <!DOCTYPE html>
-<!DOCTYPE html>
 <html>
-    <head>
-        <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-        <title>`substitute(Filename('', 'Page Title'), '^.', '\u&', '')`</title>
-        meta
-    </head>
-    <body>
-        body
-    </body>
+
+<head>
+    <link rel="stylesheet" href="index.css" type="text/css" />
+    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+    <title></title>
+
+</head>
+
+<body>
+    <header id="header" class="fixed-top">
+        <div class="container">
+            <h1 clas="name of website">
+                <a href="index.html">#</a>
+            </h1>
+            <nav id="navbar" class="navbar"></nav>
+        </div>
+
+    </header>
+    <section id="sec1"></section>
+    <footer id="footer"></footer>
+</body>
+
 </html>
